// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RedBox /> renders simple errors 1`] = `
<view
  name="RedBox"
  style={
    Object {
      "backgroundColor": "rgb(204, 0, 0)",
      "paddingBottom": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 10,
      "width": 480,
    }
  }
>
  <text
    name="Message"
    style={
      Object {
        "color": "white",
        "fontSize": 16,
        "fontWeight": "bold",
        "lineHeight": 19.2,
      }
    }
  >
    Error: THIS IS AN ERROR
  </text>
  <view
    name="Frames"
    style={
      Object {
        "color": "white",
        "fontFamily": "Monaco",
        "marginTop": 20,
      }
    }
  >
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    />
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      Script.runInThisContext
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      REPLServer.defaultEval
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      bound
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      REPLServer.runBound [as eval]
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      REPLServer.onLine
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      REPLServer.emit
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      REPLServer.emit
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      REPLServer.Interface._onLine
    </text>
    <text
      style={
        Object {
          "color": "white",
          "fontFamily": "Monaco",
          "marginTop": 20,
        }
      }
    >
      REPLServer.Interface._line
    </text>
  </view>
</view>
`;

exports[`<RedBox /> renders string errors 1`] = `
<view
  name="RedBox"
  style={
    Object {
      "backgroundColor": "rgb(204, 0, 0)",
      "paddingBottom": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 10,
      "width": 480,
    }
  }
>
  <text
    name="Message"
    style={
      Object {
        "color": "white",
        "fontSize": 16,
        "fontWeight": "bold",
        "lineHeight": 19.2,
      }
    }
  >
    Error: String only error
  </text>
</view>
`;
